--- a/dst/index.html
+++ b/dst/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>React Editor</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ext-modelist.js"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-with-addons.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
@@ -13,6 +14,8 @@
         <script type="text/javascript">
         var fs     = require('fs');
         var jQuery = require('jquery');
+        var ipc    = require('ipc');
+        var events = require('events');
         </script>
         <script type="text/javascript" src="./window.js"></script>
     </body>
