--- a/dst/index.html
+++ b/dst/index.html
@@ -16,6 +16,22 @@
         var jQuery = require('jquery');
         var ipc    = require('ipc');
         var events = require('events');
+
+        var remote = require('remote');
+        var Menu = remote.require('menu');
+        var MenuItem = remote.require('menu-item');
+        var ENV = process.env;
+
+        var menu = new Menu();
+        menu.append(new MenuItem({ label: 'MenuItem1', click: function() { console.log('item 1 clicked'); } }));
+        menu.append(new MenuItem({ type: 'separator' }));
+        menu.append(new MenuItem({ label: 'MenuItem2', type: 'checkbox', checked: true }));
+        // menu.append(new MenuItem({ label: 'Open', role: 'open' }));
+
+        window.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+            menu.popup(remote.getCurrentWindow());
+        }, false);
         </script>
         <script type="text/javascript" src="./window.js"></script>
     </body>
