--- a/dst/index.html
+++ b/dst/index.html
@@ -16,7 +16,7 @@
         var jQuery = require('jquery');
         var ipc    = require('ipc');
         var events = require('events');
-
+        // var crypto = require('crypto');
         var remote = require('remote');
         var Menu = remote.require('menu');
         var MenuItem = remote.require('menu-item');
