Package manager and one test extension

--- a/dst/index.html
+++ b/dst/index.html
@@ -13,12 +13,13 @@
         <div class="main-wrap"></div>
         <script type="text/javascript">
         var fs     = require('fs');
+        var path   = require('path');
         var jQuery = require('jquery');
         var ipc    = require('ipc');
         var events = require('events');
         var remote = require('remote');
         var Menu   = remote.require('menu');
-
+        
         var ENV = process.env;
         window.__dirname = __dirname;
         </script>
