Fix the bundle not to include "crypto"

--- a/dst/index.html
+++ b/dst/index.html
@@ -19,7 +19,8 @@
         var events = require('events');
         var remote = require('remote');
         var Menu   = remote.require('menu');
-        
+        var Crypto = require('crypto');
+
         var ENV = process.env;
         window.__dirname = __dirname;
         </script>
