--- a/dst/index.html
+++ b/dst/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-with-addons.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
     </head>
-    <body>
+    <body class="">
         <div class="main-wrap"></div>
         <script type="text/javascript">
         var fs     = require('fs');
