--- a/dst/index.html
+++ b/dst/index.html
@@ -9,17 +9,20 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-with-addons.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
     </head>
-    <body class="">
+    <body class="dark">
         <div class="main-wrap"></div>
         <script type="text/javascript">
-        var fs     = require('fs');
-        var path   = require('path');
-        var jQuery = require('jquery');
-        var ipc    = require('ipc');
-        var events = require('events');
-        var remote = require('remote');
-        var Menu   = remote.require('menu');
-        var Crypto = require('crypto');
+        var fs      = require('fs');
+        var path    = require('path');
+        var jQuery  = require('jquery');
+        var ipc     = require('ipc');
+        var events  = require('events');
+        var remote  = require('remote');
+        var Menu    = remote.require('menu');
+        var Dialog  = remote.require('dialog');
+        var Crypto  = require('crypto');
+        var Promise = require('bluebird');
+        var Async   = require('async');
 
         var ENV = process.env;
         window.__dirname = __dirname;
